<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="android.br.atividade.GridLayoutActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/fab_margin"
        android:columnCount="1">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_littleMargin"
            android:columnCount="2"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin">

            <ImageView
                android:layout_width="@dimen/image"
                android:layout_height="@dimen/image"
                android:scaleType="centerCrop"
                android:src="@drawable/img_1" />

            <GridLayout
                android:layout_width="@dimen/box"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/fab_littleMargin"
                android:columnCount="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/title_1"
                    android:textSize="@dimen/fontParagraph" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/fab_littleMargin"
                    android:gravity="start"
                    android:text="@string/description_1"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/fontText" />
            </GridLayout>


        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_littleMargin"
            android:columnCount="2"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin">

            <ImageView
                android:layout_width="@dimen/image"
                android:layout_height="@dimen/image"
                android:scaleType="centerCrop"
                android:src="@drawable/img_2" />

            <GridLayout
                android:layout_width="@dimen/box"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/fab_littleMargin"
                android:columnCount="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/title_2"
                    android:textSize="@dimen/fontParagraph" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/fab_littleMargin"
                    android:gravity="start"
                    android:text="@string/description_2"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/fontText" />
            </GridLayout>


        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_littleMargin"
            android:columnCount="2"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin">

            <ImageView
                android:layout_width="@dimen/image"
                android:layout_height="@dimen/image"
                android:scaleType="centerCrop"
                android:src="@drawable/img_3" />

            <GridLayout
                android:layout_width="@dimen/box"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/fab_littleMargin"
                android:columnCount="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/title_3"
                    android:textSize="@dimen/fontParagraph" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/fab_littleMargin"
                    android:gravity="start"
                    android:text="@string/description_3"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/fontText" />
            </GridLayout>


        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_littleMargin"
            android:columnCount="2"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin">

            <ImageView
                android:layout_width="@dimen/image"
                android:layout_height="@dimen/image"
                android:scaleType="centerCrop"
                android:src="@drawable/img_4" />

            <GridLayout
                android:layout_width="@dimen/box"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/fab_littleMargin"
                android:columnCount="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/title_4"
                    android:textSize="@dimen/fontParagraph" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/fab_littleMargin"
                    android:gravity="start"
                    android:text="@string/description_4"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/fontText" />
            </GridLayout>


        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_littleMargin"
            android:columnCount="2"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin">

            <ImageView
                android:layout_width="@dimen/image"
                android:layout_height="@dimen/image"
                android:scaleType="centerCrop"
                android:src="@drawable/img_5" />

            <GridLayout
                android:layout_width="@dimen/box"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/fab_littleMargin"
                android:columnCount="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/title_5"
                    android:textSize="@dimen/fontParagraph" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/fab_littleMargin"
                    android:gravity="start"
                    android:text="@string/description_5"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/fontText" />
            </GridLayout>


        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_littleMargin"
            android:columnCount="2"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin">

            <ImageView
                android:layout_width="@dimen/image"
                android:layout_height="@dimen/image"
                android:scaleType="centerCrop"
                android:src="@drawable/img_6" />

            <GridLayout
                android:layout_width="@dimen/box"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/fab_littleMargin"
                android:columnCount="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/title_6"
                    android:textSize="@dimen/fontParagraph" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/fab_littleMargin"
                    android:gravity="start"
                    android:text="@string/description_6"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/fontText" />
            </GridLayout>


        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_littleMargin"
            android:columnCount="2"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin">

            <ImageView
                android:layout_width="@dimen/image"
                android:layout_height="@dimen/image"
                android:scaleType="centerCrop"
                android:src="@drawable/img_7" />

            <GridLayout
                android:layout_width="@dimen/box"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/fab_littleMargin"
                android:columnCount="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/title_7"
                    android:textSize="@dimen/fontParagraph" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/fab_littleMargin"
                    android:gravity="start"
                    android:text="@string/description_7"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/fontText" />
            </GridLayout>


        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_littleMargin"
            android:columnCount="2"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin">

            <ImageView
                android:layout_width="@dimen/image"
                android:layout_height="@dimen/image"
                android:scaleType="centerCrop"
                android:src="@drawable/img_8" />

            <GridLayout
                android:layout_width="@dimen/box"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/fab_littleMargin"
                android:columnCount="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/title_8"
                    android:textSize="@dimen/fontParagraph" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/fab_littleMargin"
                    android:gravity="start"
                    android:text="@string/description_8"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/fontText" />
            </GridLayout>


        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_littleMargin"
            android:columnCount="2"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin">

            <ImageView
                android:layout_width="@dimen/image"
                android:layout_height="@dimen/image"
                android:scaleType="centerCrop"
                android:src="@drawable/img_9" />

            <GridLayout
                android:layout_width="@dimen/box"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/fab_littleMargin"
                android:columnCount="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/title_9"
                    android:textSize="@dimen/fontParagraph" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/fab_littleMargin"
                    android:gravity="start"
                    android:text="@string/description_9"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/fontText" />
            </GridLayout>


        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_littleMargin"
            android:columnCount="2"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin">

            <ImageView
                android:layout_width="@dimen/image"
                android:layout_height="@dimen/image"
                android:scaleType="centerCrop"
                android:src="@drawable/img_10" />

            <GridLayout
                android:layout_width="@dimen/box"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/fab_littleMargin"
                android:columnCount="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/title_10"
                    android:textSize="@dimen/fontParagraph" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/fab_littleMargin"
                    android:gravity="start"
                    android:text="@string/description_10"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/fontText" />
            </GridLayout>


        </GridLayout>


    </GridLayout>

</ScrollView>
